--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
 
     {% capture time %}{{ content | reading_time }}{% endcapture %}
 
-    <br><br><i>Estimated reading time: {{ time }} {% if time == '1' %}minute{% else %}minutes{% endif %}
+    <br><br><i>Estimated reading time: {{ time }} {% if time == '1' %}minute{% else %}minutes{% endif %}</i>
 
 
     </p>
